# 1a

./: .gitignore  Dockerfile  README.md  example_usage.py  main.py  pyproject.toml  requirements.txt  setup.py  test_docker.bat  test_docker.sh  test_evaluation_setup.sh  verify_setup.py
docs/: SUMMARY.md  TECHNICAL.md  sample.json
input/: .gitkeep
output/: .gitkeep
pdf_outline_extractor/: __init__.py
pdf_outline_extractor/core/: __init__.py  competition_filter.py  font_analyzer.py  heading_detector.py  hierarchy_validator.py  page_processor.py  text_cleaner.py
pdf_outline_extractor/extractors/: __init__.py  base.py  fast.py  main.py  standard.py
tests/: __init__.py  deep_hierarchy_test.txt  test_extract_outline.py  validate_output.py
