[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_outline_extractor"
version = "1.0.0"
description = "A tool to extract structured outlines from PDF documents"
readme = "README.md"
authors = [
    {name = "PDF Outline Extractor Team"}
]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "pdfplumber==0.9.0",
    "numpy==1.24.3",
]

[project.scripts]
extract-pdf-outline = "main:main"

[tool.setuptools]
packages = ["pdf_outline_extractor"] 